# miniquote

./: .DEPS  .gitignore  .gn  BUILD.gn  DEPS  README.md  local.messageview  target.list
base/: BUILD.gn
ipc/: BUILD.gn
mojo/public/cpp/bindings/: BUILD.gn
mojo/public/cpp/bindings/tests/: BUILD.gn  pickle_unittest.cc
mojo/public/interfaces/bindings/: BUILD.gn
mojo/public/interfaces/bindings/tests/: BUILD.gn
mojo/public/tools/bindings/: BUILD.gn  blink_bindings_configuration.gni  chromium_bindings_configuration.gni  mojom.gni
net/: BUILD.gn
services/service_manager/: BUILD.gn
services/service_manager/embedder/: BUILD.gn  main.cc
services/service_manager/sandbox/: BUILD.gn
services/service_manager/tests/: BUILD.gn
services/service_manager/tests/sandbox/: BUILD.gn
tools/editor_configure/: Readme.md  _vimrc
tools/grit/: grit_rule.gni
url/mojom/: BUILD.gn
